fix "Submit" and "Cancel" buttons not showing
Line 105 broke UI buttons

--- a/packages/prime-ui/src/components/layout/Layout.css
+++ b/packages/prime-ui/src/components/layout/Layout.css
@@ -102,7 +102,7 @@
 }
 
 .prime__drawer {
-  height: calc(100% - 55px);
+/*  height: calc(100% - 55px);*/
   overflow: auto;
   padding-bottom: 53px;
 }
